# compute-shader-particles

./: .gitignore  CImg.h  CMakeLists.txt  LICENSE.txt  Makefile  README.md  config.h  fragment.glsl  main.cpp  renderTextureCompute.glsl  shaders.cpp  shaders.h  updateParticlesCompute.glsl  vertex.glsl
initializers/: BaseInitializer.cpp  BaseInitializer.hpp
